# nostratui

./: Cargo.toml  README.md
src/: app.rs  cache.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs
src/controllers/: app.rs  app_controller.rs  mod.rs  post_controller.rs
src/models/: cache.rs  client.rs  config.rs  mod.rs  post.rs
src/views/: mod.rs  tui.rs  widgets.rs
